--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,37 @@
+name: CI
+
+on:
+  push:
+  pull_request:
+
+jobs:
+  run-sql-lab:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Start containers
+        run: docker compose up -d
+
+      - name: Wait for Postgres
+        run: sleep 3
+
+      - name: Run indexes
+        run: docker exec -i sql_analytics_lab_db psql -U postgres -d analytics < queries/00_indexes.sql
+
+      - name: Run Query 01
+        run: docker exec -i sql_analytics_lab_db psql -U postgres -d analytics < queries/01_dimensional_metrics.sql > /tmp/out01.txt
+
+      - name: Run Query 02
+        run: docker exec -i sql_analytics_lab_db psql -U postgres -d analytics < queries/02_data_quality_checks.sql > /tmp/out02.txt
+
+      - name: Run Query 03
+        run: docker exec -i sql_analytics_lab_db psql -U postgres -d analytics < queries/03_performance_notes.sql > /tmp/out03.txt
+
+      - name: Compare outputs to expected_results
+        run: |
+          diff -u expected_results/01_dimensional_metrics.md /tmp/out01.txt
+          diff -u expected_results/02_data_quality_checks.md /tmp/out02.txt
+          diff -u expected_results/03_performance_notes.md /tmp/out03.txt
 
